--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css");
+.css-1okebmr-indicatorSeparator {
+  background-color: transparent !important;
+}
+
+.select__placeholder.css-14el2xx-placeholder {
+  color: #212529;
+}
+
+.checkbox-invalid-feedback {
+  margin-left: -24px;
+}
